--- a/style.css
+++ b/style.css
@@ -29,8 +29,18 @@ body {
     transition: all .5s ease;
 }
 
-.colorBar:active {
+.activeColorBar {
+    z-index: 2; 
+    margin: 0;
+
+    position: absolute;
+
+    width: 31.5vw;
     height:100vh;
+
+    background-color: rgb(226, 53, 94);
+
+    transition: all .5s ease;
 }
 
 .colorBar2 {
@@ -151,8 +161,4 @@ body {
     border-radius: 50px;
 
     transition: transform .5s ease;
-}
-
-.circleButton:hover {
-    transform: scale(1.2);
 }
