--- a/style.css
+++ b/style.css
@@ -25,27 +25,15 @@ body {
     height: 3vh;
 
     background-color: rgb(226, 53, 94);
+    border:none;
+    outline: none;
 
     transition: all .5s ease;
 }
 
-.activeColorBar {
+#colorBar2 {
     z-index: 2; 
-    margin: 0;
-
-    position: absolute;
-
-    width: 31.5vw;
-    height:100vh;
-
-    background-color: rgb(226, 53, 94);
-
-    transition: all .5s ease;
-}
-
-.colorBar2 {
-    z-index: 2; 
-    margin-top:97vh;
+    top:97vh;
     margin-left: 68.5vw;
 
     position: absolute;
@@ -54,13 +42,10 @@ body {
     height: 3vh;
 
     background-color: rgb(226, 53, 94);
+    border:none;
+    outline: none;
 
     transition: all .5s ease;
-}
-
-.colorBar2:active {
-    height:100vh;
-    margin-top: 0vh;
 }
 
 .nameBar {
