--- a/style.css
+++ b/style.css
@@ -59,19 +59,53 @@ hr {
 
     position: absolute;
     margin: 0 auto;
-    top: 5vh;
-    left: 12.5vw;
+
+    top: 3vh;
+    left: 4vw;
 
     text-align: left;
+    font-size: 75%;
+}
+
+.aboutName {
+    margin: 0;
+    padding-bottom: 2vh;
+
+    letter-spacing: .6vw;
+    margin-top: 2vh;
+
+    font-size: 16px;
+}
+
+.aboutLine {
+    position: absolute;
+    top: 6.5vh;
+    left: 22vw;
+
+    width: 85vw;
+
+    border-color: white;
+}
+
+.aboutTitle {
+    padding: 0;
+    margin: 2vw 0 2vw 0;
+
+    letter-spacing: .4vw;
+
 }
 
 ul {
     list-style-type: none;
+    line-height: 2vw;
+
+    margin: 0 4vh 4vh;
     padding: 0;
 }
 
 .skills {
     display: flex;
+    width: 150%;
 }
 
 .mediaWrapper {
@@ -98,6 +132,8 @@ ul {
     flex-shrink: 1;
     padding: 1vw;
 
+    text-align:center;
+
     font-size: 100%;
     text-decoration: none;
     color: white;
@@ -108,6 +144,7 @@ ul {
 .mediaLink:hover {
     flex-grow: 1;
     flex-shrink: 1;
+    padding:1.5vw;
 
     background: rgba(128, 128, 128, 0.199);
 
@@ -119,7 +156,7 @@ ul {
     margin: 0;
     padding: 0;
 
-    letter-spacing: .7vw;
+    letter-spacing: .6vw;
 
     position: absolute;
     top: 5vh;
@@ -190,6 +227,8 @@ ul {
 
 .colProcess {
     width:75%;
+
+    overflow: scroll;
 }
 
 .colCircMenu {
@@ -245,9 +284,9 @@ ul {
 }
 
 #circleButton {
-    position: absolute;
-    margin-left: 55vw;
-    margin-top: 40vh;
+    position: relative;
+    margin: 0 2vw;
+    top:-94vh;
 
 	width: 4vw;
 	height: 4vw;
@@ -256,9 +295,33 @@ ul {
     border:none;
     outline: none;
 
-    transition: transform .5s ease;
+    transition: transform .4s ease;
 }
 
 #circleButton:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
+}
+
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: .5vw;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 0; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgba(226, 53, 94);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(192, 45, 79)
 }
