--- a/style.css
+++ b/style.css
@@ -3,10 +3,6 @@
     overflow: hidden;
 }
 
-html {
-    overflow: auto;
-}
-
 body, button {
     font-family: 'Playfair Display', serif;
     font-size: 1vw;
@@ -203,6 +199,7 @@ ul {
     position: absolute;
     margin: 0 auto;
     left: 0;
+    top: 0;
 
     /* height: 68vh; */
     height: 136vh;
