--- a/style.css
+++ b/style.css
@@ -219,14 +219,30 @@ ul {
     grid-template-columns: 32% 4% 32% 32%; 
     grid-template-rows: 100%;
 }
-#gallerySlider1 {
-    grid-row-start: 1;
-    grid-row-end: 2;
-}
 
+#gallerySlider1 {
+    grid-row: 1;
+}
 #gallerySlider2 {
-    grid-row-start: 2;
-    grid-row-end: 3;
+    grid-row: 2;
+}
+#gallerySlider3 {
+    grid-row: 3;
+}
+#gallerySlider4 {
+    grid-row: 4;
+}
+#gallerySlider5 {
+    grid-row: 5;
+}
+#gallerySlider6 {
+    grid-row: 6;
+}
+#gallerySlider7 {
+    grid-row: 7;
+}
+#gallerySlider8 {
+    grid-row: 8;
 }
 
 .navContent {
@@ -329,7 +345,7 @@ ul {
     line-height: 190%
 }
 
-#figure1 {
+.titleFigure {
     object-fit: cover;
     filter: grayscale(100%);
 
