--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body, button {
     font-family: 'Playfair Display', serif;
-    font-size: 1em;
+    font-size: .9em;
 
     color: grey;
 
@@ -67,7 +67,7 @@ line {
     position: absolute;
     margin: 10vh 4vw;
 
-    font-size: 75%;
+    font-size: 90%;
 
     display: flex;
     flex-direction: column;
@@ -120,17 +120,17 @@ line {
     left: 4vw;
 
     text-align: left;
-    font-size: 75%;
+    font-size: 90%;
 }
 
 .aboutName {
     margin: 0;
     padding-bottom: 2vh;
 
-    letter-spacing: .6vw;
+    letter-spacing: .6em;
     margin-top: 2vh;
 
-    font-size: 1em;
+    font-size: 100%;
 }
 
 .aboutLine {
@@ -147,7 +147,7 @@ line {
     padding: 0;
     margin: 2vw 0 2vw 0;
 
-    letter-spacing: .4vw;
+    letter-spacing: .4em;
 
 }
 
@@ -222,13 +222,13 @@ ul {
     margin: 0;
     padding: 0;
 
-    letter-spacing: .6vw;
+    letter-spacing: .6em;
 
     position: absolute;
     top: 5vh;
     left: 12.5vw;
 
-    font-size: 1em;
+    font-size: 100%;
 }
 
 .nameLine {
@@ -453,3 +453,9 @@ ul {
     background: rgb(192, 45, 79)
 }
  */
+
+ @media only screen and (max-width: 600px) {
+    .galleryContent {
+        width: 237vw;
+    }
+}
