--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     overflow-y: scroll;
     overflow-x: hidden;
+    overflow: visible;
 }
 
 body, button {
@@ -289,7 +290,7 @@ ul {
 
 #scrollClip {
     position: absolute;
-    height: 110em;
+    height: 154em;
     width: 100vw;
     overflow: hidden;
 }
@@ -349,40 +350,59 @@ ul {
     
     left: 0;
     height: 68vh;
-    width: 3vw;
+    width: 20em;
     overflow: visible;
 
     transition: top .4s ease, left .4s ease;
 }
 
-#circleContainer {
+.circleContainer {
     position: relative;
     left: 0;
 
     height: 68vh;
-    width: 3.4em;         
+    width: inherit;
 
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-content: flex-start;
+}
+
+.menuItem {
+    height: 2em;
+
+    display: grid;
+    grid-template-columns: 20% 80%;
+    align-items: center;
 }
 
 .circle {
     margin: 0 auto;
 
-	width: 2em;
+	width: auto;
 	height: 2em;
     
-    background-color: #cecece;
+    background-color: rgba(0, 0, 0, 0);
+    color: whitesmoke;
     border:none;
     border-radius: 50px;
     outline: none;
 
-    transition: transform .4s ease;
+    transition: background-color .4s ease;
 }
 
 .circle:hover {
-    transform: scale(1.15);
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.navProjectTitle {
+    color: whitesmoke;
+    opacity: 0.0;
+    transition: all .4s ease;
+}
+.circle:hover + .navProjectTitle {
+    opacity: 1.0;
 }
 
 #expandButton {
