--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ ul {
 }
 
 .galleryContent {
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.75) 0%, rgba(8,8,8,.75) 90%, rgba(255,255,255,0.25) 100%); 
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.85) 0%, rgba(8,8,8,0.85) 91%, rgba(255,255,255,0.25) 100%);
     background-attachment: scroll;
     background-repeat: no-repeat;
 
