--- a/2_gallery_style.css
+++ b/2_gallery_style.css
@@ -108,10 +108,10 @@ p {
 
 .gallerySlide {
   visibility: hidden;
-  -webkit-transition: -webkit-clip-path 0.6s ease-out;
-  transition: -webkit-clip-path 0.6s ease-out;
-  transition: clip-path 0.6s ease-out;
-  transition: clip-path 0.6s ease-out, -webkit-clip-path 0.6s ease-out;
+  -webkit-transition: -webkit-clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1);
+  transition: -webkit-clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1);
+  transition: clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1);
+  transition: clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1), -webkit-clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1);
 }
 
 .animate {
@@ -173,8 +173,8 @@ p {
   -webkit-box-pack: top;
       -ms-flex-pack: top;
           justify-content: top;
-  -webkit-transition: 0.4s ease-out;
-  transition: 0.4s ease-out;
+  -webkit-transition: opacity 0.8s cubic-bezier(0.5, 0.2, 0.15, 1);
+  transition: opacity 0.8s cubic-bezier(0.5, 0.2, 0.15, 1);
 }
 
 .textContainer .inactiveInitial {
@@ -189,27 +189,27 @@ p {
 .textContainer h1 {
   margin: 0;
   padding: 0.0em 0 0 -7px;
-  -webkit-transition: 0.4s ease-out;
-  transition: 0.4s ease-out;
-  -webkit-transition-delay: "margin-top" 0.6s;
-          transition-delay: "margin-top" 0.6s;
+  -webkit-transition: 0.8s cubic-bezier(0.5, 0.2, 0.15, 1);
+  transition: 0.8s cubic-bezier(0.5, 0.2, 0.15, 1);
+  -webkit-transition-delay: .6s;
+          transition-delay: .6s;
 }
 
 .textContainer h3 {
   margin: 0;
   padding: 3em 0 0 0;
-  -webkit-transition: 0.4s ease-out;
-  transition: 0.4s ease-out;
-  -webkit-transition-delay: "margin-top" 1s;
-          transition-delay: "margin-top" 1s;
+  -webkit-transition: 0.8s cubic-bezier(0.5, 0.2, 0.15, 1);
+  transition: 0.8s cubic-bezier(0.5, 0.2, 0.15, 1);
+  -webkit-transition-delay: 1s;
+          transition-delay: 1s;
 }
 
 .textContainer h4 {
   margin: 0;
-  -webkit-transition: 0.4s ease-out;
-  transition: 0.4s ease-out;
-  -webkit-transition-delay: "margin-top" 0.5s;
-          transition-delay: "margin-top" 0.5s;
+  -webkit-transition: 0.8s cubic-bezier(0.5, 0.2, 0.15, 1);
+  transition: 0.8s cubic-bezier(0.5, 0.2, 0.15, 1);
+  -webkit-transition-delay: .5s;
+          transition-delay: .5s;
 }
 
 .textContainer p {
@@ -217,10 +217,10 @@ p {
   padding: 1em 0 0 0;
   width: 16em;
   font-size: 1em;
-  -webkit-transition: 0.4s ease-out;
-  transition: 0.4s ease-out;
-  -webkit-transition-delay: "margin-top" 1.2s;
-          transition-delay: "margin-top" 1.2s;
+  -webkit-transition: 0.8s cubic-bezier(0.5, 0.2, 0.15, 1);
+  transition: 0.8s cubic-bezier(0.5, 0.2, 0.15, 1);
+  -webkit-transition-delay: 1.2s;
+          transition-delay: 1.2s;
 }
 
 /* CARD LAYOUT */
@@ -263,7 +263,7 @@ p {
 }
 
 .card img {
-  height: auto;
+  height: 250%;
   -ms-grid-column: 7;
   -ms-grid-column-span: 4;
   grid-column: 7 / span 4;
