--- a/3_project_style.css
+++ b/3_project_style.css
@@ -79,9 +79,8 @@ p {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 80vw;
+  width: 100vw;
   height: auto;
-  margin-left: 20vw;
 }
 
 .card {
@@ -89,9 +88,9 @@ p {
       -ms-flex-order: 3;
           order: 3;
   z-index: 1;
-  width: 70vw;
+  width: 78vw;
   height: auto;
-  margin: 5em 0;
+  margin: 5em;
   -ms-flex-item-align: center;
       align-self: center;
   overflow: hidden;
@@ -107,32 +106,11 @@ p {
           justify-content: space-between;
 }
 
-.card h2 {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 4;
-  grid-column: 2 / span 4;
-  -ms-grid-row: 5;
-  -ms-grid-row-span: 3;
-  grid-row: 5 / span 3;
-}
-
-.card p {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
-  grid-column: 2 / span 2;
-  -ms-grid-row: 7;
-  -ms-grid-row-span: 2;
-  grid-row: 7 / span 2;
-}
-
 .card img {
   height: 25em;
-  -ms-grid-column: 7;
-  -ms-grid-column-span: 4;
-  grid-column: 7 / span 4;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 4;
-  grid-row: 1 / span 4;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
 }
 
 .flexText {
@@ -144,6 +122,9 @@ p {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 13em;
-  padding: 8em 3em;
+  padding: 8em 4em 0 12em;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
 }
 /*# sourceMappingURL=3_project_style.css.map */
