--- a/3_project_style.scss
+++ b/3_project_style.scss
@@ -104,18 +104,17 @@ p {
 
     display: flex;
     flex-direction: column;
-    width: 80vw;
+    width: 100vw;
     height: auto;
-    margin-left: 20vw;
 }
 
 .card {
     order: 3;
     z-index: 1;
 
-    width: 70vw;
+    width: 78vw;
     height: auto;
-    margin: 5em 0;
+    margin: 5em;
     align-self: center;
 
     overflow: hidden;
@@ -126,17 +125,14 @@ p {
     justify-content: space-between;
 
     h2 {
-        grid-column: 2 / span 4;
-        grid-row: 5 / span 3;
+
     }
     p {
-        grid-column: 2 / span 2;
-        grid-row: 7 / span 2;
+
     }
     img {
         height: 25em;
-        grid-column: 7 / span 4;
-        grid-row: 1 / span 4;
+        order:1;
     }
 }
 
@@ -145,5 +141,7 @@ p {
     flex-direction: column;
 
     width: 13em;
-    padding: 8em 3em;
+    padding: 8em 4em 0 12em;
+
+    order:2;
 }
