--- a/3_project_style.css
+++ b/3_project_style.css
@@ -1,3 +1,24 @@
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+body {
+  overflow: auto;
+  -webkit-perspective: 1px;
+          perspective: 1px;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+}
+
+body, body * {
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+}
+
 /* gallery title */
 /* card title */
 /* gallery support text */
@@ -63,6 +84,26 @@ p {
   height: 300vh;
   -webkit-box-shadow: 0 0 10em 8em black;
           box-shadow: 0 0 10em 8em black;
+}
+
+.flexText {
+  -webkit-transform: translateZ(-0.3px) scale(1.3);
+          transform: translateZ(-0.3px) scale(1.3);
+}
+
+img {
+  -webkit-transform: translateZ(-0.2px) scale(1.2);
+          transform: translateZ(-0.2px) scale(1.2);
+}
+
+h1 {
+  -webkit-transform: translateZ(-1px) scale(2);
+          transform: translateZ(-1px) scale(2);
+}
+
+h4 {
+  -webkit-transform: translateZ(-1px) scale(2);
+          transform: translateZ(-1px) scale(2);
 }
 
 /* CARD LAYOUT */
