--- a/3_project_style.scss
+++ b/3_project_style.scss
@@ -1,3 +1,61 @@
+// Magic parallax mixins
+// Magic parallax mixins
+// Magic parallax mixins
+// Magic parallax mixins
+
+$parallax-perspective : 1 !default;
+$parallax-element     : "body" !default;
+$parallax-ios         : true !default;
+
+@mixin parallax-init(
+  $perspective  : $parallax-perspective,
+  $element      : $parallax-element,
+  $parallax-ios : $parallax-ios
+  ) {
+  @if $element == "body" {
+    html, body {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+  }
+  #{$element} {
+    overflow: auto;
+    perspective: $perspective * 1px;
+    transform-style: preserve-3d;
+    // Allows for smooth scrolling but disables parallax effects.
+    @if $parallax-ios == false {
+      -webkit-overflow-scrolling: touch;
+    }
+    // Preserve 3D
+    &, * {
+      transform-style: preserve-3d;
+    }
+  }
+}
+
+@mixin parallax(
+  $distance    : 0,
+  $perspective : $parallax-perspective
+  ) {
+  transform:
+    translateZ($distance * $perspective * 1px)
+    scale(abs($distance - 1));
+  //z-index: $distance * 1000;
+}
+
+// End of magic parallax mixins
+// End of magic parallax mixins
+// End of magic parallax mixins
+// End of magic parallax mixins
+
+
+@include parallax-init;
+
+
+
 $font-stack:    'Roboto', sans-serif;
 $text-color:    #b3b3b3;
 
@@ -87,9 +145,24 @@ p {
     height: 300vh;
 
     box-shadow: 0 0 10em 8em black;
+
+    //@include parallax(1);
 }
-
-
+.card {
+    // @include parallax(-.05);
+}
+.flexText {
+    @include parallax(-.3);
+}
+img {
+    @include parallax(-.2);
+}
+h1 {
+    @include parallax(-1);
+}
+h4 {
+    @include parallax(-1);
+}
 
 
 
