--- a/test/parallaxTest.css
+++ b/test/parallaxTest.css
@@ -40,37 +40,25 @@ body, body * {
   margin: auto;
 }
 
-.container :nth-child(1) {
+h1 {
   -webkit-transform: translateZ(-0.1px) scale(1.1);
           transform: translateZ(-0.1px) scale(1.1);
   z-index: -100;
 }
 
-.container :nth-child(2) {
+h2 {
   -webkit-transform: translateZ(0.2px) scale(0.8);
           transform: translateZ(0.2px) scale(0.8);
   z-index: 200;
 }
 
-.container :nth-child(3) {
+img {
   -webkit-transform: translateZ(0.3px) scale(0.7);
           transform: translateZ(0.3px) scale(0.7);
   z-index: 300;
 }
 
-.container :nth-child(4) {
-  -webkit-transform: translateZ(0.1px) scale(0.9);
-          transform: translateZ(0.1px) scale(0.9);
-  z-index: 100;
-}
-
-.container :nth-child(5) {
-  -webkit-transform: translateZ(-2px) scale(3);
-          transform: translateZ(-2px) scale(3);
-  z-index: -2000;
-}
-
-.container > * {
-  position: absolute;
+* {
+  position: relative;
 }
 /*# sourceMappingURL=parallaxTest.css.map */
