--- a/test/parallaxTest.scss
+++ b/test/parallaxTest.scss
@@ -63,35 +63,29 @@ $parallax-ios         : true !default;
 
 
 
-$primary: #1586D1;
+// $primary: #1586D1;
 
 @include parallax-init;
 
 .container {
-  :nth-child(1) {
-    @include parallax(-.1);
-
-  }
-  :nth-child(2) {
-    @include parallax(.2);
-
-  }
-  :nth-child(3) {
-    @include parallax(.3);
- 
-  }
-  :nth-child(4) {
-    @include parallax(.1);
-
-  }
-  :nth-child(5) {
-    @include parallax(-2);
-
-  }
   padding: 10%;
   max-width: 40em;
   margin: auto;
-  > * {
-    position: absolute;
-  }
 }
+  h1 {
+    @include parallax(-.1);
+
+  }
+  h2 {
+    @include parallax(.2);
+
+  }
+  img {
+    @include parallax(.3);
+ 
+  }
+  
+
+ * {
+    position: relative;
+  }
